src/golden/cards/typeerrors/test.golden/needkey.ut
We need to report an error if contract is called with incorrect arguments

	test put can add something initially
		data Card c
		contract c Setter haveA (Thing "hello")
